css/screen.css
@font-face {
  font-family: 'patua_oneregular';
  src: url("fonts/patuaone-regular-webfont.eot");
  src: url("fonts/patuaone-regular-webfont.eot?#iefix") format("embedded-opentype"), url("fonts/patuaone-regular-webfont.woff") format("woff"), url("fonts/patuaone-regular-webfont.ttf") format("truetype"), url("fonts/patuaone-regular-webfont.svg#patua_oneregular") format("svg");
  font-weight: normal;
  font-style: normal; }
body, html {
  height: 100%; }

body {
  -webkit-font-smoothing: antialiased;
  font-family: 'Roboto', serif; }

a {
  color: #68a3cc; }

p, ul {
  font-size: 22px; }

p {
  text-align: justify;
  line-height: 1.5em; }

ol, ol p:first-child {
  font-weight: bold; }

code {
  color: #444; }

.wrapper {
  height: 100%; }

header {
  background: #68a3cc;
  width: 600px;
  overflow: hidden;
  padding-top: 15px;
  padding-left: 30px;
  padding-right: 30px;
  padding-bottom: 60px;
  z-index: 30;
  position: fixed;
  height: 100%; }
  @media only screen and (max-width: 60em) {
    header {
      position: static;
      width: 100%;
      height: auto; } }

.header-content {
  position: relative; }

h1 {
  margin-top: 20px;
  color: #fff;
  font-size: 92px;
  display: block;
  max-width: 550px;
  float: left;
  line-height: 90px; }

h2, h2 a {
  color: #4b4b4b;
  font-size: 38px;
  margin-bottom: 20px; }

h2 a:hover {
  color: #428cbf; }

h1 {
  font-family: "patua_oneregular", serif; }

p.date {
  margin-bottom: 25px; }
  p.date span {
    font-family: "Helvetica", sans-serif;
    font-size: 18px;
    padding: 10px;
    border-radius: 5px;
    border: 1px solid #68a3cc;
    color: #68a3cc; }

.highlight {
  margin-bottom: 10px;
  background: #F7F7F7; }

.contact {
  margin-top: 40px;
  float: left;
  clear: both; }
  .contact a {
    display: block;
    float: left;
    height: 70px; }
    .contact a svg path {
      fill: #fff; }
    .contact a.email {
      width: 100px;
      margin-right: 40px; }
      .contact a.email:hover svg path {
        fill: #456c87; }
    .contact a.twitter {
      width: 85px; }
      .contact a.twitter:hover svg path {
        fill: #456c87; }

#content {
  overflow: hidden;
  margin-left: 600px; }
  @media only screen and (max-width: 60em) {
    #content {
      margin-left: 0; } }

.primary-column {
  max-width: 960px;
  padding-left: 30px;
  padding-right: 30px;
  max-width: 925px; }

#content .row {
  clear: both;
  position: relative;
  height: 100%;
  min-height: 100%;
  min-width: 100%;
  padding-bottom: 100px;
  z-index: 10; }

a.more {
  display: block;
  width: 80px;
  text-align: center;
  font-family: "Helvetica", sans-serif;
  font-size: 18px;
  padding: 5px 15px;
  border-radius: 5px;
  background: #68a3cc;
  color: #fff;
  margin: 20px 0; }
  a.more:hover {
    background: #7EB6DD; }

article {
  padding-top: 30px; }

ul.posts {
  margin: 0;
  list-style-type: none; }
  ul.posts li {
    padding-top: 30px; }

#content .last {
  padding-bottom: 0; }

.github-widget {
  margin: 60px 0px; }

footer {
  background-color: #FCFCFC;
  border-top: 1px solid #dadada; }

img.me {
  border-radius: 110px;
  border: 8px solid #68a3cc;
  margin: 30px;
  float: left; }

p.bio {
  max-width: 425px;
  float: left;
  padding: 52px 30px 0;
  font-size: 22px; }

@media only screen and (max-width: 40em) {
  p, ul {
    font-size: 23px; }

  h1 {
    display: none; } }
@media only screen and (max-width: 80em) {
  img.me {
    margin: -60px auto -20px;
    display: block;
    float: none; }

  p.bio {
    float: none;
    margin: 0 auto 30px; } }

